# super-resolution-bot

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dlschool_project_report/: README.md
project/: utils.py
project/bot/: __main__.py  config.py  loader.py  messages.py  sync_handlers.py
project/bot/handlers/: __init__.py  message_handlers.py
project/celery_task_app/: tasks.py  worker.py
project/ml_model/: config.py  inference_module.py  loader.py
project/ml_model/Real_ESRGAN/: README.md  arch_util.py  realesrgan.py  rrdbnet_arch.py  utils_sr.py
